--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+
+
 /* Resetear márgenes y rellenos */
 body, h1, h2, p, form {
     margin: 0;
@@ -78,4 +80,7 @@ section p {
 /* Estilos de los botones adicionales */
 section button:not(:last-child) {
     margin-right: 10px;
+}
+body,header{
+    background-color: black;
 }
